grammar.js
        source_file: $ =>
            repeat(
                choice(
                    $.module_declaration,
                    $.script_declaration,
                    $.address_block,
                    $.spec_block
                )
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Address blocks (legacy syntax)
        // ═══════════════════════════════════════════════════════════════════════════

        address_block: $ =>
            seq(
                'address',
                field('address', $._leading_name_access),
                '{',
                repeat($.module_declaration),
                '}'
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Module declaration
        // ═══════════════════════════════════════════════════════════════════════════

        module_declaration: $ =>
            seq(
                optional($.attributes),
                'module',
                field('name', choice($.module_identity, $.identifier)),
                field('body', $.module_body)
            ),

        module_identity: $ =>
            seq(field('address', $._leading_name_access), '::', field('module', $.identifier)),

        module_body: $ => seq('{', repeat($._module_member), '}'),

        _module_member: $ =>
            choice(
                $.use_declaration,
                $.friend_declaration,
                $.constant_declaration,
                $.struct_declaration,
                $.enum_declaration,
                $.function_declaration,
                $.spec_block
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Script declaration
        // ═══════════════════════════════════════════════════════════════════════════

        script_declaration: $ =>
            seq(
                optional($.attributes),
                'script',
                '{',
                repeat(choice($.use_declaration, $.constant_declaration)),
                $.function_declaration,
                repeat($.spec_block),
                '}'
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Use declarations
        // ═══════════════════════════════════════════════════════════════════════════

        use_declaration: $ =>
            seq(
                optional($.attributes),
                'use',
                choice($.use_module, $.use_module_member, $.use_module_members),
                ';'
            ),

        use_module: $ => seq($.module_identity, optional($.use_alias)),

        use_module_member: $ => seq($.module_identity, '::', $.use_member),

        use_module_members: $ => seq($.module_identity, '::', '{', commaSep($.use_member), '}'),

        use_member: $ => seq(field('member', $.identifier), optional($.use_alias)),

        use_alias: $ => seq('as', field('alias', $.identifier)),

        // ═══════════════════════════════════════════════════════════════════════════
        // Friend declaration
        // ═══════════════════════════════════════════════════════════════════════════

        friend_declaration: $ => seq(optional($.attributes), 'friend', $.name_access_chain, ';'),

        // ═══════════════════════════════════════════════════════════════════════════
        // Constant declaration
        // ═══════════════════════════════════════════════════════════════════════════

        constant_declaration: $ =>
            seq(
                optional($.attributes),
                'const',
                field('name', $.identifier),
                ':',
                field('type', $._type),
                '=',
                field('value', $._expression),
                ';'
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Struct declaration
        // ═══════════════════════════════════════════════════════════════════════════

        struct_declaration: $ =>
            choice($._native_struct_declaration, $._regular_struct_declaration),

        _native_struct_declaration: $ =>
            seq(
                optional($.attributes),
                repeat($._modifier),
                'native',
                'struct',
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                optional(field('abilities', $.ability_declarations)),
                ';'
            ),

        _regular_struct_declaration: $ =>
            seq(
                optional($.attributes),
                repeat($._modifier),
                'struct',
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                choice(
                    // Named fields: struct Foo has copy { x: u64, y: bool }
                    seq(
                        optional(field('abilities', $.ability_declarations)),
                        field('fields', $.struct_fields)
                    ),
                    // Positional fields: struct Pair(u64, u8) has copy, drop;
                    seq(
                        field('fields', $.positional_fields),
                        optional(field('abilities', $.ability_declarations)),
                        ';'
                    ),
                    // No fields (type tag): struct TypeTag has copy, drop;
                    seq(optional(field('abilities', $.ability_declarations)), ';')
                )
            ),

        struct_fields: $ => seq('{', commaSep($.field_declaration), '}'),

        field_declaration: $ => seq(field('name', $.identifier), ':', field('type', $._type)),

        positional_fields: $ => seq('(', commaSep($._type), ')'),

        ability_declarations: $ => seq('has', commaSep1($.ability)),

        ability: _ => choice('copy', 'drop', 'store', 'key'),

        // ═══════════════════════════════════════════════════════════════════════════
        // Enum declaration
        // ═══════════════════════════════════════════════════════════════════════════

        enum_declaration: $ =>
            seq(
                optional($.attributes),
                repeat($._modifier),
                'enum',
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                optional(field('abilities', $.ability_declarations)),
                '{',
                commaSep($.enum_variant),
                '}'
            ),

        enum_variant: $ =>
            seq(
                field('name', $.identifier),
                optional(
                    choice(field('fields', $.struct_fields), field('fields', $.positional_fields))
                )
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Function declaration
        // ═══════════════════════════════════════════════════════════════════════════

        function_declaration: $ =>
            choice($._native_function_declaration, $._regular_function_declaration),

        _native_function_declaration: $ =>
            seq(
                optional($.attributes),
                repeat($._modifier),
                'native',
                repeat($._modifier),
                'fun',
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                field('parameters', $.function_parameters),
                optional(seq(':', field('return_type', $._type))),
                optional(field('acquires', $.acquires_clause)),
                ';'
            ),

        _regular_function_declaration: $ =>
            seq(
                optional($.attributes),
                repeat($._modifier),
                'fun',
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                field('parameters', $.function_parameters),
                optional(seq(':', field('return_type', $._type))),
                optional(field('acquires', $.acquires_clause)),
                field('body', $.block)
            ),

        _modifier: $ => choice($._visibility, $.entry_modifier, $.inline_modifier),

        entry_modifier: _ => 'entry',
        inline_modifier: _ => 'inline',

        function_parameters: $ => seq('(', commaSep($.function_parameter), ')'),

        function_parameter: $ => seq(field('name', $.identifier), ':', field('type', $._type)),

        acquires_clause: $ => seq('acquires', commaSep1($.name_access_chain)),

        // ═══════════════════════════════════════════════════════════════════════════
        // Attributes
        // ═══════════════════════════════════════════════════════════════════════════

        attributes: $ => repeat1(seq('#', '[', commaSep($.attribute), ']')),

        attribute: $ =>
            seq(
                $.name_access_chain,
                optional(choice(seq('=', $._attribute_value), seq('(', commaSep($.attribute), ')')))
            ),

        _attribute_value: $ => choice($._literal_value, $.name_access_chain),

        // ═══════════════════════════════════════════════════════════════════════════
        // Type parameters (generics)
        // ═══════════════════════════════════════════════════════════════════════════

        type_parameters: $ => seq('<', commaSep1($.type_parameter), '>'),

        type_parameter: $ =>
            seq(
                optional('phantom'),
                field('name', $.identifier),
                optional(seq(':', field('constraints', $.ability_constraints)))
            ),

        type_arguments: $ => seq('<', commaSep1($._type), '>'),

        // ═══════════════════════════════════════════════════════════════════════════
        // Types
        // ═══════════════════════════════════════════════════════════════════════════

        _type: $ =>
            choice(
                $.primitive_type,
                $.ref_type,
                $.tuple_type,
                $.apply_type,
                $.function_type,
                $.unit_type
            ),

        primitive_type: _ =>
            choice(
                'u8',
                'u16',
                'u32',
                'u64',
                'u128',
                'u256',
                'bool',
                'address',
                'signer',
                // Signed integers (Move 2.3)
                'i8',
                'i16',
                'i32',
                'i64',
                'i128',
                'i256'
            ),

        ref_type: $ => seq(choice('&', '&mut'), $._type),

        apply_type: $ => prec.left(seq($.name_access_chain, optional($.type_arguments))),

        // Function type: |u64, bool| u64 has copy + drop
        // Also handles empty params: || u64
        _leading_name_access: $ =>
            choice(
                $.identifier,
                $.numerical_address,
                // Contextual keywords that are also valid identifiers in expression context
                alias('vector', $.identifier), // vector[..] literal, but also vector::length()
                alias('exists', $.identifier), // spec quantifier, but also exists<T>(addr) builtin
                alias('forall', $.identifier), // spec quantifier, but may appear as name
                alias('choose', $.identifier) // spec quantifier, but may appear as name
            ),

        numerical_address: _ => /0x[a-fA-F0-9]+/,

        name_access_chain: $ =>
            prec.left(seq($._leading_name_access, repeat(seq('::', $.identifier)))),

        // module_name is just an identifier - use $.identifier directly where needed

        // ═══════════════════════════════════════════════════════════════════════════
        // Literals
        // ═══════════════════════════════════════════════════════════════════════════

        num_literal: _ =>
            token(
                choice(
                    // Decimal with optional type suffix
                    /[0-9][0-9_]*(u8|u16|u32|u64|u128|u256|i8|i16|i32|i64|i128|i256)?/,
                    // Hex with optional type suffix
                    /0[xX][a-fA-F0-9][a-fA-F0-9_]*(u8|u16|u32|u64|u128|u256|i8|i16|i32|i64|i128|i256)?/
                )
            ),

        _expression: $ =>
            choice(
                $.lambda_expression,
                $.if_expression,
                $.while_expression,
                $.loop_expression,
                $.for_expression,
                $.match_expression,
                $.return_expression,
                $.abort_expression,
                $.assign_expression,
                $._unary_expression,
                $.binary_expression,
                $.quantifier_expression
            ),

        // ─── Lambda ───────────────────────────────────────────────────────────────

        abort_expression: $ => prec.right(seq('abort', $._expression)),

        binary_expression: $ => {
            const table = [
                [PREC.IMPLIES, '==>'],
                [PREC.IFF, '<==>'],
                [PREC.OR, '||'],
                [PREC.AND, '&&'],
                [PREC.EQ, '=='],
                [PREC.EQ, '!='],
                [PREC.EQ, '<'],
                [PREC.EQ, '>'],
                [PREC.EQ, '<='],
                [PREC.EQ, '>='],
                [PREC.RANGE, '..'],
                [PREC.BITOR, '|'],
                [PREC.XOR, '^'],
                [PREC.BITAND, '&'],
                [PREC.SHIFT, '<<'],
                [PREC.SHIFT, '>>'],
                [PREC.ADD, '+'],
                [PREC.ADD, '-'],
                [PREC.MUL, '*'],
                [PREC.MUL, '/'],
                [PREC.MUL, '%'],
            ];

            return choice(
                ...table.map(([precedence, operator]) =>
                    prec.left(
                        precedence,
                        seq(
                            field('lhs', $._expression),
                            field('operator', operator),
                            field('rhs', $._expression)
                        )
                    )
                )
            );
        },

        // ─── Unary expressions ────────────────────────────────────────────────────

        _unary_expression: $ =>
            choice(
                $.not_expression,
                $.borrow_expression,
                $.dereference_expression,
                $.move_expression,
                $.copy_expression,
                $._expression_term
            ),

        borrow_expression: $ => prec(PREC.UNARY, seq(choice('&', '&mut'), $._unary_expression)),

        name_expression: $ => $.name_access_chain,

        // Generic name expression for spec globals: supply<CoinType>
        // Uses prec.dynamic(2) to prefer over comparison interpretation.
        call_expression: $ =>
            choice(
                prec.dynamic(
                    2,
                    seq(
                        field('function', $.name_access_chain),
                        field('type_arguments', $.type_arguments),
                        field('arguments', $.arg_list)
                    )
                ),
                prec(
                    PREC.CALL,
                    seq(field('function', $.name_access_chain), field('arguments', $.arg_list))
                )
            ),

        // Macro call: assert!(cond, code)
        // The macro name and ! are a single token to avoid ambiguity with NOT operator
        field_initializer: $ =>
            seq(field('field', $.identifier), optional(seq(':', field('value', $._expression)))),

        // Dot expression: obj.field, obj.method(args), obj.0
        _bind_list: $ => choice($._bind, seq('(', commaSep($._bind), ')')),
